[package]
name = "sand"
version = "0.1.0"
description = "a simple falling sand celluar automaton"
repository = "https://github.com/thismarvin/sand"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.78"
console_error_panic_hook = { version = "0.1.6", optional = true }

[profile.release]
opt-level = "s"
